moce kompilują się na końcu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2690 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -102,30 +102,36 @@ static_modules_ldflags = @static_modules_ldflags@
 bin_PROGRAMS = kadu
 
 kadu_SOURCES = \
-about.cpp about.h about_moc.cpp \
-chat.cpp chat.h chat_moc.cpp \
-config_dialog.cpp config_dialog.h config_dialog_moc.cpp \
+about.cpp about.h \
+chat.cpp chat.h \
+config_dialog.cpp config_dialog.h \
 config_file.cpp config_file.h \
 debug.cpp debug.h \
-emoticons.cpp emoticons.h emoticons_moc.cpp \
-expimp.cpp expimp.h expimp_moc.cpp \
-gadu.cpp gadu.h gadu_moc.cpp \
-history.cpp history.h history_moc.cpp \
-ignore.cpp ignore.h ignore_moc.cpp \
-kadu.cpp kadu.h kadu_moc.cpp \
+emoticons.cpp emoticons.h \
+expimp.cpp expimp.h \
+gadu.cpp gadu.h \
+history.cpp history.h \
+ignore.cpp ignore.h \
+kadu.cpp kadu.h \
 main.cpp \
-message_box.cpp message_box.h message_box_moc.cpp \
-misc.cpp misc.h misc_moc.cpp \
-modules.cpp modules.h modules_moc.cpp \
-pending_msgs.cpp pending_msgs.h pending_msgs_moc.cpp \
-personal_info.cpp personal_info.h personal_info_moc.cpp \
-search.cpp search.h search_moc.cpp \
-status.cpp status.h status_moc.cpp \
-tabbar.cpp tabbar.h tabbar_moc.cpp \
-userbox.cpp userbox.h userbox_moc.cpp \
-userinfo.cpp userinfo.h userinfo_moc.cpp \
-userlist.cpp userlist.h userlist_moc.cpp \
-updates.cpp updates.h updates_moc.cpp
+message_box.cpp message_box.h \
+misc.cpp misc.h \
+modules.cpp modules.h \
+pending_msgs.cpp pending_msgs.h \
+personal_info.cpp personal_info.h \
+search.cpp search.h \
+status.cpp status.h \
+tabbar.cpp tabbar.h \
+userbox.cpp userbox.h \
+userinfo.cpp userinfo.h \
+userlist.cpp userlist.h \
+updates.cpp updates.h \
+about_moc.cpp chat_moc.cpp config_dialog_moc.cpp emoticons_moc.cpp \
+expimp_moc.cpp gadu_moc.cpp history_moc.cpp ignore_moc.cpp \
+kadu_moc.cpp message_box_moc.cpp misc_moc.cpp modules_moc.cpp \
+pending_msgs_moc.cpp personal_info_moc.cpp search_moc.cpp status_moc.cpp \
+tabbar_moc.cpp userbox_moc.cpp userinfo_moc.cpp userlist_moc.cpp \
+updates_moc.cpp
 
 
 
@@ -161,22 +167,23 @@ CONFIG_CLEAN_FILES = modules_static.cpp
 bin_PROGRAMS = kadu$(EXEEXT)
 PROGRAMS = $(bin_PROGRAMS)
 
-am_kadu_OBJECTS = about.$(OBJEXT) about_moc.$(OBJEXT) chat.$(OBJEXT) \
-	chat_moc.$(OBJEXT) config_dialog.$(OBJEXT) \
-	config_dialog_moc.$(OBJEXT) config_file.$(OBJEXT) \
-	debug.$(OBJEXT) emoticons.$(OBJEXT) emoticons_moc.$(OBJEXT) \
-	expimp.$(OBJEXT) expimp_moc.$(OBJEXT) gadu.$(OBJEXT) \
-	gadu_moc.$(OBJEXT) history.$(OBJEXT) history_moc.$(OBJEXT) \
-	ignore.$(OBJEXT) ignore_moc.$(OBJEXT) kadu.$(OBJEXT) \
-	kadu_moc.$(OBJEXT) main.$(OBJEXT) message_box.$(OBJEXT) \
-	message_box_moc.$(OBJEXT) misc.$(OBJEXT) misc_moc.$(OBJEXT) \
-	modules.$(OBJEXT) modules_moc.$(OBJEXT) pending_msgs.$(OBJEXT) \
-	pending_msgs_moc.$(OBJEXT) personal_info.$(OBJEXT) \
-	personal_info_moc.$(OBJEXT) search.$(OBJEXT) \
-	search_moc.$(OBJEXT) status.$(OBJEXT) status_moc.$(OBJEXT) \
-	tabbar.$(OBJEXT) tabbar_moc.$(OBJEXT) userbox.$(OBJEXT) \
-	userbox_moc.$(OBJEXT) userinfo.$(OBJEXT) userinfo_moc.$(OBJEXT) \
-	userlist.$(OBJEXT) userlist_moc.$(OBJEXT) updates.$(OBJEXT) \
+am_kadu_OBJECTS = about.$(OBJEXT) chat.$(OBJEXT) config_dialog.$(OBJEXT) \
+	config_file.$(OBJEXT) debug.$(OBJEXT) emoticons.$(OBJEXT) \
+	expimp.$(OBJEXT) gadu.$(OBJEXT) history.$(OBJEXT) \
+	ignore.$(OBJEXT) kadu.$(OBJEXT) main.$(OBJEXT) \
+	message_box.$(OBJEXT) misc.$(OBJEXT) modules.$(OBJEXT) \
+	pending_msgs.$(OBJEXT) personal_info.$(OBJEXT) search.$(OBJEXT) \
+	status.$(OBJEXT) tabbar.$(OBJEXT) userbox.$(OBJEXT) \
+	userinfo.$(OBJEXT) userlist.$(OBJEXT) updates.$(OBJEXT) \
+	about_moc.$(OBJEXT) chat_moc.$(OBJEXT) \
+	config_dialog_moc.$(OBJEXT) emoticons_moc.$(OBJEXT) \
+	expimp_moc.$(OBJEXT) gadu_moc.$(OBJEXT) history_moc.$(OBJEXT) \
+	ignore_moc.$(OBJEXT) kadu_moc.$(OBJEXT) \
+	message_box_moc.$(OBJEXT) misc_moc.$(OBJEXT) \
+	modules_moc.$(OBJEXT) pending_msgs_moc.$(OBJEXT) \
+	personal_info_moc.$(OBJEXT) search_moc.$(OBJEXT) \
+	status_moc.$(OBJEXT) tabbar_moc.$(OBJEXT) userbox_moc.$(OBJEXT) \
+	userinfo_moc.$(OBJEXT) userlist_moc.$(OBJEXT) \
 	updates_moc.$(OBJEXT)
 kadu_OBJECTS = $(am_kadu_OBJECTS)
 kadu_DEPENDENCIES = $(foreach mod,$(basename \
