dodany ao_sound
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2694 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -12,6 +12,8 @@
 # n - no, module disabled
 #
 
+#################### docking #########################################
+
 # Tray icon support
 module_docking=y
 
@@ -21,14 +23,10 @@ module_x11_docking=m
 # WindowMaker docking module (depends: docking)
 module_wmaker_docking=n
 
-# OpenSSL encrypted chat support
-module_encryption=m
+# Always on top window docking module (depends: docking)
+module_desktop_docking=n
 
-# Speech synthesis support (depends: notify)
-module_speech=n
-
-# Voice chat support (depends: dcc)
-module_voice=m
+##################### sound ##########################################
 
 # General sound support (depends: notify)
 module_sound=y
@@ -48,20 +46,7 @@ module_esd_sound=n
 # Network Audio System support (depends: sound)
 module_nas_sound=n
 
-# SMS module
-module_sms=m
-
-# default gateways for SMS module (depends: sms)
-module_default_sms=m
-
-# dcc module with file transfer support
-module_dcc=m
-
-# Auto away module
-module_autoaway=m
-
-# Register/unregister account, remind/change password support
-module_account_management=m
+###################### notifications #################################
 
 # General notification module
 module_notify=y
@@ -72,16 +57,46 @@ module_window_notify=m
 # Notification by hints module (depends: notify)
 module_hints=m
 
-# Always on top window docking module (depends: docking)
-module_desktop_docking=n
+# Speech synthesis support (depends: notify)
+module_speech=n
+
+###################### p2p ###########################################
+
+# dcc module with file transfer support
+module_dcc=m
+
+# Voice chat support (depends: dcc)
+module_voice=m
+
+###################### sms ###########################################
+
+# SMS module
+module_sms=m
+
+# default gateways for SMS module (depends: sms)
+module_default_sms=m
+
+###################### other #########################################
+
+# Register/unregister account, remind/change password support
+module_account_management=m
+
+# OpenSSL encrypted chat support
+module_encryption=m
+
+# Auto away module
+module_autoaway=m
+
+# Configuration wizard module
+module_config_wizard=m
 
 # Autoresponder module
 module_autoresponder=m
 
-# Echo sample module
+# Echo module (testing module!)
 module_echo=n
-# Configuration wizard module
-module_config_wizard=m
+
+############################################# EXTERNAL ###########################################################################
 
 #
 # Below are some external modules, made by third parties, but
@@ -95,10 +110,10 @@ module_config_wizard=m
 # n - no, module disabled
 #
 
-# TCL scripting support and KaduPro extensions
+# TCL scripting support and KaduPro extensions (depends: notify, docking)
 module_tcl_scripting=n
 
-# XMMS player support
+# XMMS player support (depends: notify)
 module_xmms=n
 
 # AmaroK player support
@@ -107,7 +122,7 @@ module_amarok=n
 # Description from file module
 module_filedesc=n
 
-# Mail checker module
+# Mail checker module (depends: hints)
 module_mail=n
 
 # Spellchecker module (aspell support)
@@ -121,6 +136,11 @@ module_xosd_notify=n
 
 # Weather checking
 module_weather=n
+
+# ao library sound module (alsa, oss, esd, aix, irix, nas, sun, netbsd, openbsd) (depends: sound)
+module_ao_sound=n
+
+############################################# ICONS ###########################################################################
 
 #
 # Below are some icon themes, one default and others, made by third
