--- a/.config
+++ b/.config
@@ -140,6 +140,9 @@ module_weather=n
 # ao library sound module (alsa, oss, esd, aix, irix, nas, sun, netbsd, openbsd) (depends: sound)
 module_ao_sound=n
 
+# additional contact info, birthday and name-day notifier
+module_ext_info=n
+
 ############################################# ICONS ###########################################################################
 
 #
