Brakujace ikonki w menu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2753 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -19,16 +19,16 @@ InvisibleWithMobile=invisible_m.png
 InvisibleWithDescription=invisible_d.png
 InvisibleWithDescriptionMobile=invisible_d_m.png
 
-ManageIgnored=
+ManageIgnored=manageignored16.png
 Configuration=configure.png
 ManageModules=modmanager.png
-PersonalInfo=
+PersonalInfo=identity.png
 LookupUserInfo=viewmag.png
-ImportExport=
+ImportExport=impexpicon16.png
 AddUser=adduser.png
-HelpMenuItem=
-AboutMenuItem=
-HideKadu=
+HelpMenuItem=help.png
+AboutMenuItem=abouticon16.png
+HideKadu=hide.png
 Exit=exit.png
 
 OpenChat=
@@ -68,7 +68,10 @@ ResendUserlist=reload.png
 PreviousPageHistory=back.png
 NextPageHistory=forward.png
 
+ChangePassMail=pass-mail.png
+ChangePass=password16.png
 RegisterUser=newuser.png
+UnregisterUser=deluser.png
 Mobile=mobile.png
 SendSms=mobile.png
 SendFile=filesave.png
@@ -94,10 +97,11 @@ DeleteIgnoredButton=remove.png
 AddIgnoredButton=reload.png
 ReloadPersonalInfoButton=reload.png
 SavePersonalInfoButton=filesave.png
-ChooseSelectPathDialogButton=
-RemoveSelectPathDialogButton=
-ChangeSelectPathDialogButton=
-ApplySelectPathDialogButton=
+ChooseSelectPathDialogButton=fileopen.png
+AddSelectPathDialogButton=add.png
+RemoveSelectPathDialogButton=remove.png
+ChangeSelectPathDialogButton=reload2.png
+ApplySelectPathDialogButton=reload.png
 
 ManageModulesWindowIcon=share.png
 AddUserWindowIcon=manusricon.png
@@ -129,3 +133,5 @@ XMMSTab=xmms.png
 WeatherTab=weather.png
 MailTab=mail.png
 ConfigurationWizard=wizard.png
+ShowWeather=weather16.png
+Language=language.png
