Dadano voice i chat16
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2772 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -31,12 +31,12 @@ AboutMenuItem=abouticon16.png
 HideKadu=hide.png
 Exit=exit.png
 
-OpenChat=
+OpenChat=chat16.png
 RemoveFromUserlist=deluser.png
 ClearHistory=erasehistory.png
 History=history.png
 EditUserInfo=identity.png
-VoiceChat=
+VoiceChat=voice.png
 
 AutoSendMessage=key_enter.png
 ScrollLock=scroll_lock.png
