dodany do autodownloadu zestaw grafik nuvola
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2775 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -165,3 +165,8 @@ icons_crystal16=n
 # Crystal 22x22 icons made by Arcisz
 icons_crystal22=n
 
+# Nuvola 16x16 icons by David Vignoni
+icons_nuvola16=n
+
+# Nuvola 22x22 icons by David Vignoni
+icons_nuvola22=n
