--- a/libgadu/lib/libgadu.pc.in
+++ b/libgadu/lib/libgadu.pc.in
@@ -4,8 +4,9 @@ libdir=@libdir@
 includedir=@includedir@
 
 Name: libgadu
-Version: 20040109
+Version: 20041031
 Description: libgadu
+Requires: @PC_REQUIRES@
 Libs: -L${libdir} -lgadu @LIBS_LIBGADU@
 Cflags: -I${includedir} @CFLAGS_LIBGADU@
 
