dodany do autodownloadu moduł dcopexport
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2877 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -143,6 +143,9 @@ module_ao_sound=n
 # additional contact info, birthday and name-day notifier
 module_ext_info=n
 
+# exports some functions via DCOP (needs kdelibs) (depends: notify, dcc, sms)
+module_dcopexport=n
+
 ############################################# ICONS ###########################################################################
 
 #
