dsp_sound: odtwarzanie różnych formatów dźwięków, regulacja głośności dodany do autodownloadu moduł alsa_sound
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2927 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -146,6 +146,9 @@ module_ext_info=n
 # exports some functions via DCOP (needs kdelibs) (depends: notify, dcc, sms)
 module_dcopexport=n
 
+# ALSA sound support (depends: sound)
+module_alsa_sound=n
+
 ############################################# ICONS ###########################################################################
 
 #
