poprawka zależności voice'a
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3007 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -68,7 +68,7 @@ module_speech=n
 # dcc module with file transfer support
 module_dcc=m
 
-# Voice chat support (depends: dcc)
+# Voice chat support (depends: dcc, sound)
 module_voice=m
 
 ###################### sms ###########################################
