brakujaca sciezka do dzwieku dla statusu invisible
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3010 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/sounds/default/sound.conf
+++ b/varia/themes/sounds/default/sound.conf
@@ -4,5 +4,6 @@ Chat=msg.wav
 StatusAvailable=msg.wav
 StatusBusy=msg.wav
 StatusNotAvailable=msg.wav
+StatusInvisible=msg.wav
 ConnectionError=msg.wav
 OtherMessage=msg.wav
