dodany do autodownloadu moduł miastoplusa_sms
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3119 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 # 
 # KADU CONFIGURATION FILE
 #
-
+# PL: PLIK KONFIGURACYJNY KADU
 
 #
 # Below are some internal modules, made by Kadu Team or got from others
@@ -11,95 +11,167 @@
 # m - module, compiles as .so (shared)
 # n - no, module disabled
 #
+# PL: Poni¿ej znajduje siê lista wewnêtrznych modu³ów Kadu, stworzonych przez Kadu Team
+# PL: lub przez inne osoby, ale umieszczone w ¼ród³ach ze wzglêdu na ich u¿yteczno¶æ
+#
+# PL: y - wkompiluj modu³ na sta³e w Kadu (statycznie)
+# PL: m - kompiluj jako ³adowalny modu³ (biblioteka dzielona)
+# PL: n - nie kompiluj wcale
+#
+# PL: w polu "needs" znajduje siê lista bibliotek potrzebnych do kompilacji modu³u
+# PL:                (w dystrybucjach pakietowych zwróæ uwagê na to, ¿e obrócz
+# PL:                np. pakietu libsndfile do kompilacji bêdziesz potrzebowa³
+# PL:                tak¿e pakietu libsndfile-dev lub libsndfile-devel)
+# PL: w polu "depends" znajduje siê lista innych modu³ów wymaganych
+# PL:                do dzia³ania tego modu³u
 
 #################### docking #########################################
+# PL: ############## dokowanie #######################################
 
-# Tray icon support
+# Description: Tray icon support (common part of all docking modules)
+# PL: Obs³uga ikony na tacce systemowej (wspólna czê¶æ wszystkich modu³ów dokuj±cych)
 module_docking=y
 
-# XLib tray docking techniques module (depends: docking)
+# Description: XLib tray docking techniques module (works in KDE, GNOME, Xfce, ...)
+# PL: Standardowy modu³ obs³ugi tacki systemowej przy pomocy bibliotek X11
+# PL: (dzia³a m.in. w KDE, GNOME, Xfce, ...)
+# Needs: libX11
+# Depends: docking
 module_x11_docking=m
 
-# WindowMaker docking module (depends: docking)
+# Description: WindowMaker docking module
+# PL: Modu³ obs³ugi dokowania w WindowMakerze
+# Needs: libX11
+# Depends: docking
 module_wmaker_docking=n
 
-# Always on top window docking module (depends: docking)
+# Description: Always on top window docking module
+# PL: Modu³ s³u¿±cy symulacji dokowania przy pomocy ma³ego okna
+# PL: (bez ramek i z ustawion± flag± "Zawsze na wierzchu")
+# Depends: docking
 module_desktop_docking=n
 
 ##################### sound ##########################################
+# PL: ############### d¼wiêk #########################################
 
-# General sound support (depends: notify)
+# Description: General sound support (common part of all sound modules)
+# PL: Podstawowa obs³uga d¼wiêku (wspólna czê¶æ wszystkich modu³ów d¼wiêkowych)
+# Needs: libsndfile
+# Depends: notify
 module_sound=y
 
-# External application sound support (depends: sound)
-module_ext_sound=m
-
-# Direct /dev/dsp sound support (depends: sound)
-module_dsp_sound=m
-
-# aRts sound server support (depends: sound)
-module_arts_sound=n
-
-# ESD sound server support (depends: sound)
-module_esd_sound=n
-
-# Network Audio System support (depends: sound)
-module_nas_sound=n
-
-# ALSA sound support (depends: sound)
+# Description: ALSA sound support
+# PL: Obs³uga d¼wiêku przez ALSÊ
+# Needs: libasound
+# Depends: sound
 module_alsa_sound=n
 
-###################### notifications #################################
+# Description: Direct /dev/dsp sound support (Open Sound System)
+# PL: Obs³uga d¼wiêku przez bezpo¶redni dostêp do urz±dzenia /dev/dsp (Open Sound System)
+# Depends: sound
+module_dsp_sound=m
 
-# General notification module
+# Description: aRts sound server support
+# PL: Obs³uga d¼wiêku przez serwer aRts
+# Needs: libartsc
+# Depends: sound
+module_arts_sound=n
+
+# Description: ESD sound server support
+# PL: Obs³uga d¼wiêku przez serwer ESD
+# Needs: libesd
+# Depends: sound
+module_esd_sound=n
+
+# Description: Network Audio System support
+# PL: Obs³uga d¼wiêku przez Network Audio System
+# Needs: libaudio
+# Depends: sound
+module_nas_sound=n
+
+# Description: External application sound support
+# PL: Obs³uga d¼wiêku poprzez zewnêtrzn± aplikacjê
+# Depends: sound
+module_ext_sound=m
+
+###################### notifications #################################
+# PL: ################ powiadamianie #################################
+
+# Description: General notification module (common part of all notification modules)
+# PL: Podstawowa obs³uga powiadomieñ o zdarzeniach (wspólna czê¶æ wszystkich
+# PL:                                               modu³ów powiadomieñ)
 module_notify=y
 
-# Notification by window module (depends: notify)
+# Description: Notification by window module
+# PL: Powiadamianie za pomoc± wyskakuj±cego okienka
+# Depends: notify
 module_window_notify=m
 
-# Notification by hints module (depends: notify)
+# Description: Notification by hints module
+# PL: Powiadamianie za pomoc± dymków
+# Depends: notify
 module_hints=m
 
-# Speech synthesis support (depends: notify)
+# Description: Speech synthesis support ("powiedz")
+# PL: Powiadamianie mow± za pomoc± programu "powiedz"
+# Depends: notify
 module_speech=n
 
 ###################### p2p ###########################################
+# PL: ################ po³±czenia bezpo¶rednie #######################
 
-# dcc module with file transfer support
+# Description: dcc module with file transfer support
+# PL: Podstawowy modu³ obs³ugi po³±czeñ bezpo¶rednich wraz z przesy³aniem plików
 module_dcc=m
 
-# Voice chat support (depends: dcc, sound)
+# Description: Voice chat support
+# PL: Obs³uga rozmów g³osowych
+# Depends: dcc, sound
 module_voice=m
 
 ###################### sms ###########################################
 
-# SMS module
+# Description: General SMS support module
+# PL: Podstawowy modu³ obs³ugi bramek SMSowych
 module_sms=m
 
-# default gateways for SMS module (depends: sms)
+# Description: Default Polish gateways for SMS module
+# PL: Obs³uga najwa¿niejszych polskich bramek SMSowych (Era, Idea, Plus)
+# Depends: sms
 module_default_sms=m
 
 ###################### other #########################################
+# PL: ################ inne ##########################################
 
-# Register/unregister account, remind/change password support
+# Description: Register / unregister account, remind / change password support
+# PL: Obs³uga rejestracji / wyrejestrowywania konta, przypominania / zmiany has³a
 module_account_management=m
 
-# OpenSSL encrypted chat support
+# Description: OpenSSL encrypted chat support
+# PL: Obs³uga szyfrowania wiadomo¶ci przy pomocy OpenSSLa
+# Needs: libcrypto, libssl
 module_encryption=m
 
-# Auto away module
+# Description: Auto away module
+# PL: Obs³uga automatycznej zmiany statusu po okre¶lonym czasie bezczynno¶ci
 module_autoaway=m
 
-# Configuration wizard module
+# Description: Configuration wizard module
+# PL: Modu³ konfiguracji Kadu za pomoc± wizarda (kreatora)
+# Depends: account_management sound hints
 module_config_wizard=m
 
-# Autoresponder module
+# Description: Autoresponder module
+# PL: Modu³ automatycznej odpowiedzi
 module_autoresponder=m
 
-# Echo module (testing module!)
+# Description: Echo module (it's only example!)
+# PL: Modu³ automatycznej odpowiedzi z przedrostkiem "KADU ECHO: "
+# PL: (to tylko przyk³ad jak siê pisze modu³y do Kadu)
 module_echo=n
 
 ############################################# EXTERNAL ###########################################################################
+# PL: ####################################### ZEWNÊTRZNE #########################################################################
 
 #
 # Below are some external modules, made by third parties, but
@@ -113,66 +185,111 @@ module_echo=n
 # n - no, module disabled
 #
 
-# TCL scripting support and KaduPro extensions (depends: notify, docking)
+# PL: Poni¿ej znajduje siê lista zewnêtrznych modu³ów, stworzonych przez niezale¿nych programistów,
+# PL: ale zaakceptowane przez Kadu Team i wspierane na naszym forum. Gdy wybierzesz który¶
+# PL: z tych modu³ów, jego ¼ród³a zostan± pobrane ze strony twórcy, wiêc w razie problemów nie wiñ
+# PL: nas z powodu ich (prawdopodobnie czasowej) niedostêpno¶ci.
+
+# Description: TCL scripting support and KaduPro extensions
+# PL: Modu³ uskryptowienia Kadu jêzykiem TCL wraz z zestawem skryptów KaduPro
+# Needs: libtcl8.4 libtk8.4
+# Depends: notify, docking
 module_tcl_scripting=n
 
-# XMMS player support (depends: notify)
+# Description: XMMS player support
+# PL: Obs³uga statusów pobieranych z XMMSa oraz jego kontrola z poziomu okna rozmowy
+# Needs: libxmms
+# Depends: notify
 module_xmms=n
 
-# AmaroK player support
+# Description: AmaroK player support
+# PL: Obs³uga statusów pobieranych z Amaroka
+# Needs: libkdecore
 module_amarok=n
 
-# Description from file module
+# Description: Description from file module
+# PL: Obs³uga statusów pobieranych z pliku
 module_filedesc=n
 
-# Mail checker module (depends: hints)
+# Description: Mail checker module
+# PL: Powiadamianie o nowej poczcie
+# Depends: hints
 module_mail=n
 
-# Spellchecker module (aspell support)
+# Description: Spellchecker module
+# PL: Sprawdzanie b³êdów pisowni w oknie rozmowy
+# Needs: libaspell
 module_spellchecker=n
 
-# PC-Speaker support
+# Description: PC-Speaker support
+# PL: Powiadamianie przy pomocy PC-Speakera
+# Needs: libX11
+# Depends: notify
 module_pcspeaker=n
 
-# Notification by XOSD (depends: notify)
+# Description: Notification by XOSD
+# PL: Powiadamianie w stylu OSD za pomoc± biblioteki libxosd
+# Needs: libxosd, libgtk
+# Depends: notify
 module_xosd_notify=n
 
-# Weather checking
+# Description: Weather checking
+# PL: Sprawdzanie pogody dla kontaktów
+# Depends: hints
 module_weather=n
 
-# ao library sound module (alsa, oss, esd, aix, irix, nas, sun, netbsd, openbsd) (depends: sound)
+# Description: ao library sound module (ALSA, OSS, ESD, AIX, IRIX, NAS, Sun, NenBSD, OpenBSD)
+# PL: Obs³uga d¼wiêku przy pomocy biblioteki libao (która obs³uguje:
+# PL:                                    ALSA, OSS, ESD, AIX, IRIX, NAS, Sun, NenBSD, OpenBSD)
+# Needs: libao
+# Depends: sound
 module_ao_sound=n
 
-# additional contact info, birthday and name-day notifier
+# Description: Additional contact info, birthday and name-day notifier
+# PL: Rozszerzone informacje o kontakcie, powiadamianie o urodzinach
+# Depends: hints
 module_ext_info=n
 
-# exports some functions via DCOP (needs kdelibs) (depends: notify, dcc, sms)
+# Description: Exports some functions via DCOP
+# PL: Eksportuje czê¶æ funkcji Kadu poprzez DCOP (umo¿liwa m.in. obs³ugê linków gg://xxx)
+# Needs: libkdecore
+# Depends: notify, dcc, sms
 module_dcopexport=n
 
+# Description: Miasto Plusa SMS Gateway support
+# PL: Obs³uga bramki SMSowej "Miasto Plusa"
+# Needs: libcurl, libssl
+# Depends: sms
+module_miastoplusa_sms=n
+
 ############################################# ICONS ###########################################################################
+# PL: ####################################### IKONY ###########################################################################
 
 #
-# Below are some icon themes, one default and others, made by third
-# parties, but accepted by Kadu Team and quite well supported on our
-# forum. When you choose to install any of these, the sources will
-# be downloaded from their original web pages, so don't blame us when
-# they are (maybe just temporarily) unavailable.
+# Below are some icon themes. When you choose to install any of these,
+# the package will be downloaded from their original web pages, so don't
+# blame us when they are (maybe just temporarily) unavailable.
 #
 # y - yes, install with kadu
 # n - no, icon theme disabled
 #
 
-# Default icon theme shipped with sources
+# PL: Poni¿ej znajduje siê lista zestawów ikon. Gdy wybierzesz który¶ z nich,
+# PL: odpowiednia paczka zostanie pobrana ze strony twórcy, wiêc w razie problemów
+# PL: nie wiñ nas z powodu ich (prawdopodobnie czasowej) niedostêpno¶ci.
+
+# Description: Default icon theme shipped with sources
+# PL: Standardowy zestaw ikon dostêpny razem ze ¼ród³ami Kadu
 icons_default=y
 
-# Crystal 16x16 icons made by Arcisz
+# Description: Crystal 16x16 icons made by Arcisz
 icons_crystal16=n
 
-# Crystal 22x22 icons made by Arcisz
+# Description: Crystal 22x22 icons made by Arcisz
 icons_crystal22=n
 
-# Nuvola 16x16 icons by David Vignoni
+# Description: Nuvola 16x16 icons by David Vignoni
 icons_nuvola16=n
 
-# Nuvola 22x22 icons by David Vignoni
+# Description: Nuvola 22x22 icons by David Vignoni
 icons_nuvola22=n
