--- a/.config
+++ b/.config
@@ -262,6 +262,10 @@ module_dcopexport=n
 # Depends: sms
 module_miastoplusa_sms=n
 
+# Description: Tabbed chat dialog module
+# PL:Modu³ okna rozmowy z zak³adkami
+module_tabs=n 
+
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
 
