dodany do autodownloadu led_notify
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3121 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -263,8 +263,14 @@ module_dcopexport=n
 module_miastoplusa_sms=n
 
 # Description: Tabbed chat dialog module
-# PL:Modu³ okna rozmowy z zak³adkami
+# PL: Modu³ okna rozmowy z zak³adkami
 module_tabs=n 
+
+# Description: Notification by Scroll Lock LED
+# PL: Powiadamiania diod± Scroll Lock
+# Needs: libX11
+# Depends: notify
+module_led_notify=n
 
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
