--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -90,6 +90,7 @@ STATIC_MODULES_DECLS = @STATIC_MODULES_DECLS@
 STATIC_MODULES_REGRS = @STATIC_MODULES_REGRS@
 STRIP = @STRIP@
 VERSION = @VERSION@
+Z_LIBS = @Z_LIBS@
 am__include = @am__include@
 am__quote = @am__quote@
 enable_pheaders = @enable_pheaders@
