wykrywanie Qt na FBSD
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3191 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/configure.ac
+++ b/configure.ac
@@ -471,7 +471,7 @@ FIND_LIBRARY([qt-mt],[$QTDIR/lib /usr/lib/qt3/lib /usr/local/qt/lib /usr/lib/qt 
 	QT_LIBS="$QT_LIBS -L$FILE_DIR"
 ],[
 	AC_MSG_ERROR([libqt-mt not found - please install libqt3])
-],[$PNG_LIBS])
+],[$PNG_LIBS $PTHREAD_LDFLAGS $PTHREAD_LIBS])
 AC_SUBST(QT_LIBS)
 
 #################
