usprawnienia przy prekompilowanych nagłówkach na fbsd
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3196 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/configure.ac
+++ b/configure.ac
@@ -570,7 +570,11 @@ if test -z "$enable_pheaders"; then
 	enable_pheaders=no
 fi
 if test "$enable_pheaders" = "yes"; then
-	grep -h "include [[\"<]].*\.h" kadu/*.cpp kadu/*.h | sort -u > kadu/kadu-headers.h
+	rm -f kadu/kadu-headers.h
+	for i in kadu-config.h `ls -1 kadu | grep "\.h$"`; do
+		echo "#include \"$i\"" >> kadu/kadu-headers.h
+	done
+	grep -h '#include <q[^>]*>' kadu/*.cpp | sort -u >> kadu/kadu-headers.h
 fi
 AC_SUBST(enable_pheaders)
 AM_CONDITIONAL(PHEADERS_ENABLED,test "$enable_pheaders" = "yes")
