--- a/libgadu/lib/Makefile.in
+++ b/libgadu/lib/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.26 2004/01/10 12:57:27 chilek Exp $
+# $Id: Makefile.in,v 1.27 2005/04/09 11:19:49 adrian Exp $
 
 prefix = @prefix@
 exec_prefix = @exec_prefix@
@@ -8,7 +8,7 @@ includedir = @includedir@
 # increased with ABI changes
 VERSION_MAJOR=3
 # increased with API changes
-VERSION_MINOR=0
+VERSION_MINOR=2
 
 CC = @CC@ 
 CFLAGS = @CFLAGS_LIBGADU@ -I. -I.. -Wall
